# glc2

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/: Doxyfile
src/client/: CMakeLists.txt  client.c  client.h  elfhacks.c  elfhacks.h  event.c  event.h  hook.c  hook.h  log.c  log.h  main.c  opengl.c  opengl.h  x11.c  x11.h
src/client/i386/: CMakeLists.txt
src/common/: format.h  packetstream.c  packetstream.h
src/glc2/: CMakeLists.txt  glc2.c
src/server/: CMakeLists.txt  glc2-server.h  server.c  server.h
